fix: mini_title text-align

--- a/src/css/page.css
+++ b/src/css/page.css
@@ -153,6 +153,7 @@ body {
 }
 
 .mini_title {
+    display: unset !important;
     font-size: 20px;
     font-weight: bold;
     color: var(--font-color);
